3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Main change is the addition of name_pl and client_type to object
structure.  The name_pl contains the proper plural name instance - fixes
problem of '2 tooths'.  client_type is sent to the client so that client
doesn't need to figure out sorting on its own.  Client_type is an object
attribute, so can be modified in maps to hide the real type.
--
common/arch.c: item_matched_string() modified to use the name_pl field
   when trying to match names, and not to try to make the name plural
   itself. 
common/item.c: query_short_name(),query_base_name() modified to
    use name_pl instead of trying to make the name plural.
common/loader.c, common/loader.l:  Add code to load and save the name_pl
    value and client_type.  Add logic when object is finished loading
    to set name_pl value to same as name or arch name if no name_pl
    is specified - this supports old maps/characters in which the objects
    dont have a name_pl field yet.  Disable logic for need_an and need_ie
    flags since they are no longer needed.  Fix bug that caused
    elevation not to get saved.
common/object.c: Add client_type check for CAN_MERGE function.  Add
    appropriate logice in functions to handle setting, clearing, and
    copying of name_pl values.  Remove unused anim_... fields
    initialization.
doc/Developers/objects: Add information about the name_pl field and
    client_type.
doc/Developers/protocol: Remove item protocol command info - it has
    been obsoleted.  Add information about item2 protocol command.
include/define.h:  Remote ST1_* values - they were not being used.
    comment out FLAG_AN and FLAG_NEED_IE values.